examples/test/testpolicy16002.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16002
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key2: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value11
      podSelector:
        matchLabels:
          key7: value22
          key28: value20
          key26: value3
